--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 
 Links to all my files<br>
 
-<li><a href="..">My Github</a> 
+<li><a href="https://github.com/OwenD817321/MSSGAMING2006">My Github</a> 
 <li><a href="..">My Website Index</a>
 
 
