--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 Links to all my files<br>
 
 <li><a href="https://github.com/OwenD817321/MSSGAMING2006">My Github Repository</a> 
-<li><a href="..">My Website Index</a>
+<li><a href="https://owend817321.github.io/MSSGAMING2006/public/index.html">My Website Index</a>
 
 
 
