--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@ Links to all my files<br>
 
 
 
-<li><a href="C:\Users\Owen\OneDrive - SCHOOL DIST 75 (MISSION)\G11-Owen-Dedrick-Gamedev-Marking">T3A03-webpage-Owen.html</a>
+<li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A03-Webpage-Owen.html">T3A03-webpage-Owen.html</a>
 <li><a href="..">...</a>
 <li><a href="..">...</a>
 <li><a href="..">...</a>
