--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@ Links to all my files<br>
 
 <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A03-Webpage-Owen.html">T3A03-webpage-Owen.html</a>
 <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A05-forms-Owen.html">T3A05-forms-Owen.html</a>
-<li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A06-CSS-by-Owen.html">T3S06-CSS-by-Owen</a>
+<li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A06-CSS-by-Owen.html">T3A06-CSS-by-Owen</a>
 <li><a href="..">...</a>
 <li><a href="..">...</a>
 <li><a href="..">...</a>
