--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@ Links to all my files<br>
 <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A05-forms-Owen.html">T3A05-forms-Owen.html</a>
 <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A06-CSS-by-Owen.html">T3A06-CSS-by-Owen.html</a>
 <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A07-code-Owen.html">T3A07-code-Owen.html</a>
-<li><a href="..">...</a>
+<li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A08-Overview-Owen.html">T3A08-Overview-Owen.html</a>
 <li><a href="..">...</a>
 <li><a href="..">...</a>
 <li><a href="..">...</a>
