--- a/public/T3A03-Webpage-Owen.html
+++ b/public/T3A03-Webpage-Owen.html
@@ -1,7 +1,7 @@
 <h1 align=center> Basic webpage by Owen </h1>
 
 Text<br>
-<img src="https://i.redd.it/5y7tddpqblq41.jpg" width="200" height="286">><br>
+<img src="https://i.redd.it/5y7tddpqblq41.jpg" width="200" height="286"><br>
 <a
 href="https://www.google.ca">Goooooogle</a><br>
 
