--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,14 @@ Links to all my files<br>
 <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A06-CSS-by-Owen.html">T3A06-CSS-by-Owen.html</a>
 <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A07-code-Owen.html">T3A07-code-Owen.html</a>
 <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A08-Overview-Owen.html">T3A08-Overview-Owen.html</a>
+<li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A09-Events-Owen.html">T3A09-Events-Owen.html</a>
+<li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A10-inOut-Owen.html">T3A10-inOut-Owen.html</a>
+<li><a href="..">...</a>
+<li><a href="..">...</a>
+<li><a href="..">...</a>
+<li><a href="..">...</a>
+<li><a href="..">...</a>
+<li><a href="..">...</a>
 <li><a href="..">...</a>
 <li><a href="..">...</a>
 <li><a href="..">...</a>
