--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@ Links to all my files<br>
 <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A08-Overview-Owen.html">T3A08-Overview-Owen.html</a>
 <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A09-Events-Owen.html">T3A09-Events-Owen.html</a>
 <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A10-inOut-Owen.html">T3A10-inOut-Owen.html</a>
-<li><a href="..">...</a>
+<li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A11-Variables-Owen.html">T3A11-Variables-Owen.html</a>
 <li><a href="..">...</a>
 <li><a href="..">...</a>
 <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A14-for-loop-Owen.html">T3A14-for-loop-Owen.html</a>
