--- a/public/T3A05-forms-Owen.html
+++ b/public/T3A05-forms-Owen.html
@@ -17,3 +17,28 @@ Fancy<br>
 <textarea id="myArea01" rows=4 cols=20>
 Blah, Blah, Blah,
 </textarea>
+
+<style> 
+input[type=text] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border: none;
+  background-color: #8ebc3c;
+  color: white;
+}
+</style>
+</head>
+<body>
+
+<p>Top 10 People:</p>
+
+<form>
+  <label for="fname">1.</label>
+  <input type="text" id="fname" name="fname" value="Dababy">
+  <label for="lname">2.</label>
+  <input type="text" id="lname" name="lname" value="Mother Teresa">
+</form>
+
+</body>
