--- a/public/T3A05-forms-Owen.html
+++ b/public/T3A05-forms-Owen.html
@@ -1,5 +1,5 @@
 <h1 align=center>T3A05-forms-Owen.html</h1>
-We will show lots sof different form entries for web pages <br>
+We will show lots of different form entries for web pages <br>
 Version 0.0.5<br>
 
 Number: <input id="myNum01" type=number value=5><br>
