--- a/public/T3A06-CSS-by-Owen.html
+++ b/public/T3A06-CSS-by-Owen.html
@@ -6,6 +6,10 @@
 
 Since CSS is cool what is the entire list of things we can do?<br>
 
+<p style="background-color:Tomato;">
+Yo this text is sick
+</p>
+
 <a
 href="https://www.w3schools.com/css/css_examples.asp">https://www.w3schools.com/css/css_exanples.asp</a><br><br>
 
