--- a/public/T3A06-CSS-by-Owen.html
+++ b/public/T3A06-CSS-by-Owen.html
@@ -1,4 +1,5 @@
-<h1 align=center>T3A06-CSS-by-Owen</h1>
+<h1 align=center>T3A06-CSS-by-Owen</h1><br>
+Version 0.0.2
 
 <b> This is not that cool </b><br>
 
