--- a/public/index.html
+++ b/public/index.html
@@ -1,26 +1,27 @@
-<h1 align=center>Game Dev By Owen Grade 11</h1>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<body>
+<body>
 
-Links to all my files<br>
+<div class="w3-container">
+  <h2 align=center>Game Dev By Owen Grade 11</h2>
+  <p>Links to all my websites</p>
+  <ul class="w3-ul w3-card-4" style="width:35%">
+    <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A03-Webpage-Owen.html">T3A03-webpage-Owen.html</a></li>
+    <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A05-forms-Owen.html">T3A05-forms-Owen.html</a></li>
+    <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A06-CSS-by-Owen.html">T3A06-CSS-by-Owen.html</a></li>
+    <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A07-code-Owen.html">T3A07-code-Owen.html</a>
+    <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A08-Overview-Owen.html">T3A08-Overview-Owen.html</a>
+    <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A09-Events-Owen.html">T3A09-Events-Owen.html</a>
+    <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A10-inOut-Owen.html">T3A10-inOut-Owen.html</a>
+    <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A11-Variables-Owen.html">T3A11-Variables-Owen.html</a>
+    <li><a href="..">...</a>
+    <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A13-functions-Owen.html">T3A13-functions-Owen.html</a>
+    <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A14-for-loop-Owen.html">T3A14-for-loop-Owen.html</a>
+    <li><a href="..">...</a>
+    <li><a href="..">...</a>
+    <li><a href="..">...</a>
+    <li><a href="..">...</a>
+    <li><a href="..">...</a>
+    <li><a href="..">...</a>
 
-<li><a href="https://github.com/OwenD817321/MSSGAMING2006">My Github Repository</a> 
-<li><a href="https://owend817321.github.io/MSSGAMING2006/public/index.html">My Website Index</a>
-
-
-
-<li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A03-Webpage-Owen.html">T3A03-webpage-Owen.html</a>
-<li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A05-forms-Owen.html">T3A05-forms-Owen.html</a>
-<li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A06-CSS-by-Owen.html">T3A06-CSS-by-Owen.html</a>
-<li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A07-code-Owen.html">T3A07-code-Owen.html</a>
-<li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A08-Overview-Owen.html">T3A08-Overview-Owen.html</a>
-<li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A09-Events-Owen.html">T3A09-Events-Owen.html</a>
-<li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A10-inOut-Owen.html">T3A10-inOut-Owen.html</a>
-<li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A11-Variables-Owen.html">T3A11-Variables-Owen.html</a>
-<li><a href="..">...</a>
-<li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A13-functions-Owen.html">T3A13-functions-Owen.html</a>
-<li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A14-for-loop-Owen.html">T3A14-for-loop-Owen.html</a>
-<li><a href="..">...</a>
-<li><a href="..">...</a>
-<li><a href="..">...</a>
-<li><a href="..">...</a>
-<li><a href="..">...</a>
-<li><a href="..">...</a>
