--- a/public/T3A06-CSS-by-Owen.html
+++ b/public/T3A06-CSS-by-Owen.html
@@ -11,6 +11,22 @@ Since CSS is cool what is the entire list of things we can do?<br>
 Yo this text is sick
 </p>
 
+<style>
+p.ex1 {
+  direction: rtl;
+  unicode-bidi: bidi-override;
+}
+</style>
+</head>
+<body>
+
+<p>This text is gonna moonwalk</p>
+
+<p class="ex1">I am moonwalking</p>
+
+</body>
+</html>
+
 <a
 href="https://www.w3schools.com/css/css_examples.asp">https://www.w3schools.com/css/css_exanples.asp</a><br><br>
 
