--- a/public/T3A06-CSS-by-Owen.html
+++ b/public/T3A06-CSS-by-Owen.html
@@ -11,6 +11,19 @@ Since CSS is cool what is the entire list of things we can do?<br>
 Yo this text is sick
 </p>
 
+<head>
+<style>
+div.gallery {
+  margin: 5px;
+  border: 1px solid #ccc;
+  float: left;
+  width: 180px;
+}
+
+div.gallery:hover {
+  border: 1px solid #777;
+}
+
 
 div.gallery img {
   width: 100%;
