--- a/public/T3A06-CSS-by-Owen.html
+++ b/public/T3A06-CSS-by-Owen.html
@@ -84,7 +84,8 @@ p.ex1 {
 <p class="ex1">I am moonwalking</p>
 
 </body>
-</html>
+</html><br>
+<h3> More examples of css </h3><br>
 
 <a
 href="https://www.w3schools.com/css/css_examples.asp">https://www.w3schools.com/css/css_exanples.asp</a><br><br>
