--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A13-functions-Owen.html">T3A13-functions-Owen.html</a>
     <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A14-for-loop-Owen.html">T3A14-for-loop-Owen.html</a>
     <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A15-arrays-Owen.html">T3A15-arrays-Owen.html</a>
-    <li><a href="..">...</a>
+    <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A16-Objects-Owen.html">T3A16-Objects-Owen.html</a>
     <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A17-bonus-class-Owen.html">T3A17-bonus-class-Owen.html</a>
     <li><a href="..">...</a>
     <li><a href="..">...</a>
