--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <h2 align=center>Game Dev By Owen Grade 11</h2>
   <p>Links to all my websites</p>
   <ul class="w3-ul w3-card-4" style="width:35%">
+    <li><a href="https://github.com/OwenD817321/MSSGAMING2006">My Github</a>
     <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A03-Webpage-Owen.html">T3A03-webpage-Owen.html</a></li>
     <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A05-forms-Owen.html">T3A05-forms-Owen.html</a></li>
     <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A06-CSS-by-Owen.html">T3A06-CSS-by-Owen.html</a></li>
