--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
   <p>Links to all my websites</p>
   <ul class="w3-ul w3-card-4" style="width:35%">
     <li><a href="https://github.com/OwenD817321/MSSGAMING2006">My Github</a>
+    <li></a><li>
+    <li><a>Term 3</a></li>
     <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A03-Webpage-Owen.html">T3A03-webpage-Owen.html</a></li>
     <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A05-forms-Owen.html">T3A05-forms-Owen.html</a></li>
     <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A06-CSS-by-Owen.html">T3A06-CSS-by-Owen.html</a></li>
@@ -16,14 +18,27 @@
     <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A09-Events-Owen.html">T3A09-Events-Owen.html</a>
     <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A10-inOut-Owen.html">T3A10-inOut-Owen.html</a>
     <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A11-Variables-Owen.html">T3A11-Variables-Owen.html</a>
-    <li><a href="..">...</a>
+    <li><a >...</a>
     <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A13-functions-Owen.html">T3A13-functions-Owen.html</a>
     <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A14-for-loop-Owen.html">T3A14-for-loop-Owen.html</a>
     <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A15-arrays-Owen.html">T3A15-arrays-Owen.html</a>
     <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A16-Objects-Owen.html">T3A16-Objects-Owen.html</a>
     <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A17-bonus-class-Owen.html">T3A17-bonus-class-Owen.html</a>
     <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A18-Sounds-and-events-Owen.html">T3A18-Sounds-and-events-Owen.html</a>
+    <li></a><li>
+    <li><a>Term 4</a></li>
     <li><a href="..">...</a>
     <li><a href="..">...</a>
+    <li><a href="..">...</a>
+    <li><a href="..">...</a>
+    <li><a href="..">...</a>
+    <li><a href="..">...</a>
+    <li><a href="..">...</a>
+    <li><a href="..">...</a>
+    <li><a href="..">...</a>
+    <li><a href="..">...</a>
+    <li><a href="..">...</a>
+    <li><a href="..">...</a>
+    <li></a><li
 <ul>
 
