--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
     <li><a href="..">...</a>
     <li><a href="..">...</a>
     <li><a href="..">...</a>
-    <li><a href="..">...</a>
+    <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T4A12-canvas-Owen.html">T4A12-canvas-Owen.html</a>
     <li></a><li
 <ul>
 
