--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
     <li><a href="..">...</a>
     <li><a href="..">...</a>
     <li><a href="..">...</a>
-    <li><a href="..">...</a>
+    <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T4A06-scoring-Owen.html">T4A06-scoring-Owen.html</a>
     <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T4A07-Random-auto-move-Owen.html">T4A07-Random-auto-move-Owen.html</a>
     <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T4A08-auto-background-easy-Owen.html">T4A08-auto-background-easy-Owen.html</a>
     <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T4A09-auto-background-better-Owen.html">T4A09-auto-background-better-Owen.html</a>
