--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,9 @@
     <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T4A10-continuous-gravity-Owen.html">T4A10-continuous-gravity-Owen.html</a>
     <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T4A11-console.log-Owen.html">T4A11-console.log-Owen.html</a>
     <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T4A12-canvas-Owen.html">T4A12-canvas-Owen.html</a>
+    <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T4A13-rotate-Owen.html">T4A13-rotate-Owen.html</a>
+    <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T4A14-image-drag-Owen.html">T4A14-image-drag-Owen.html</a>
+    <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T4A15-snake-Owen.html">T4A15-snake-Owen.html</a>
     <li></a><li
 <ul>
 
