--- a/public/index.html
+++ b/public/index.html
@@ -28,10 +28,10 @@
     <li></a><li>
     <li><a>Term 4</a></li>
     <li><a href="..">...</a>
-    <li><a href="..">...</a>
-    <li><a href="..">...</a>
-    <li><a href="..">...</a>
-    <li><a href="..">...</a>
+    <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T4A02-maze-Owen.html">T4A02-maze-Owen.html</a>
+    <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T4A03-win-and-checkAll-Owen.html">T4A03-win-and-checkall-Owen.html</a>
+    <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T4A04-WASD-Owen.html">T4A04-WASD-Owen.html</a>
+    <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T4A05-continuous-bounce-Owen.html">T4A05-continous-bounce-Owen.html</a>
     <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T4A06-scoring-Owen.html">T4A06-scoring-Owen.html</a>
     <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T4A07-Random-auto-move-Owen.html">T4A07-Random-auto-move-Owen.html</a>
     <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T4A08-auto-background-easy-Owen.html">T4A08-auto-background-easy-Owen.html</a>
