--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,9 @@
     <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T4A13-rotate-Owen.html">T4A13-rotate-Owen.html</a>
     <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T4A14-image-drag-Owen.html">T4A14-image-drag-Owen.html</a>
     <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T4A15-snake-Owen.html">T4A15-snake-Owen.html</a>
+    <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T4A16-bullet-Owen.html">T4A16-bullet-Owen.html</a>
+    <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T4A17-flappy-bird-Owen.html">T4A17-flappy-bird-Owen.html</a>
+    <li><a href="..">...</a>
     <li></a><li
 <ul>
 
