--- a/public/T4A08-auto-background-easy-Owen.html
+++ b/public/T4A08-auto-background-easy-Owen.html
@@ -80,7 +80,7 @@ function myCheckAll(){
    Span 3 </span><br>
 
 <span id="mySpanBackground" style="z-index:-1; position:absolute; left:0; top:0; width:45; height:30"> 
- <a href="_/public/mybackground01.jpg" width=3000> </span><br>
+ <img src="https://raw.githubusercontent.com/OwenD817321/MSSGAMING2006/main/public/mybackground01.jpg" width=3000> </span> <br>
 
 
 
