--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,10 @@
   <p>Links to all my websites</p>
   <ul class="w3-ul w3-card-4" style="width:35%">
     <li><a href="https://github.com/OwenD817321/MSSGAMING2006">My Github</a>
-    <li><a>Final Project</a></li>
+    <li><a><b>Final Project</b></a></li>
     <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/Owen-D-Game-Level-1.html">My Level 1 Game</a>
+    <li><a><b>Construct Game</b></a></li>
+    <li><a href="https://owend817321.github.io/MSSGAMING2006/public/Construct-Game/">Construct Game</a>
     <li></a><li>
     <li><a>Term 3</a></li>
     <li><a href="https://htmlpreview.github.io/?https://github.com/OwenD817321/MSSGAMING2006/blob/main/public/T3A03-Webpage-Owen.html">T3A03-webpage-Owen.html</a></li>
